--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">RainbowToast</string>
+    <string name="app_name">HalloweenToast</string>
     <string name="success_message_lite">Connection Established Successfully!</string>
     <string name="success_lite">Success</string>
 </resources>
